# statismo

./: CMakeLists.txt
modules/ITK/include/: statismoITKConfig.h
modules/VTK/: CMakeLists.txt
modules/core/include/: StatismoH5Cpp.h
